# emulv

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  config.json
cmake/module/: Doxygen.cmake  GetJson.cmake  GetLibriscv.cmake  GetQWindowKit.cmake  GetRiscv-disassembler.cmake  GetSpdlog.cmake  Install.cmake  QtCommon.cmake
cmake/script/: docker_build_script.sh
doc/V2/: .$Adresarova struktura puvodni (V1) verze.drawio.bkp  Adresarova struktura puvodni (V1) verze.drawio
emulator/: CMakeLists.txt  EmulatorUnit.cpp  EmulatorUnit.h  README.md  build_and_run.sh  program.cpp
src/: CMakeLists.txt  config.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/elf/: gpio_test-arduino-physical.elf  gpio_test.c  gpio_test.elf  gpio_test.out  memory_experiment.out  readme.txt  uart_test_receiver.c
src/emulator/: CMakeLists.txt  EmulatorUnit.cpp  EmulatorUnit.h
src/emulator/include/: EmulatorUnit.h
src/modules/: CMakeLists.txt  ExampleDevice.cpp  ExampleDevice.h  PeripheralDevice.h  gpio.cpp  gpio.h  uart.cpp  uart.h
src/modules/include/: ExampleDevice.h  PeripheralDevice.h  gpio.h  uart.h
src/peripherals/: CMakeLists.txt  gpio.cpp  uart.cpp
src/peripherals/include/: PeripheralDevice.h  gpio.h  uart.h
src/plugins/: CMakeLists.txt
src/plugins/libLoader/: LibLoader.h  defines.h
src/plugins/libraryLoader/: libraryLoader.h
src/plugins/peripheralsApi/: PeripheralDevice.h  PeripheralsApi.h
src/plugins/peripheralsDynamicLibs/: CMakeLists.txt
src/plugins/peripheralsDynamicLibs/gpio/: CMakeLists.txt  gpio.cpp  gpio.h
src/plugins/peripheralsDynamicLibs/uart/: CMakeLists.txt  uart.cpp  uart.h
src/plugins/peripheralsLibs/gpio/: CMakeLists.txt  GpioPort.cpp  GpioPort.h  gpio.cpp  gpio.h
src/plugins/peripheralsLibs/gpio/resources/: panel.qml
src/plugins/peripheralsLibs/uart/: CMakeLists.txt  uart.cpp  uart.h
src/plugins/peripheralsLibs/uart/resources/: panel.qml
src/resources/: resources.qrc
src/ui/: BreakpointAreaWidget.cpp  BreakpointAreaWidget.h  CMakeLists.txt  Controller.cpp  Controller.h  EmulatorInterface.cpp  EmulvApi.h  MemoryWidget.cpp  MemoryWidget.h  RegistersWidget.cpp  RegistersWidget.h  UiController.cpp  _old.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  breakpointbutton.cpp  breakpointbutton.h  disassemblyview.cpp  disassemblyview.h  disassemblywidget.cpp  disassemblywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtquickcontrols2.conf  resources.qrc  ui_main.cpp
src/ui/disassembly/: BreakpointAreaWidget.cpp  BreakpointAreaWidget.h  DisassemblyWidget.cpp  DisassemblyWidget.h
src/ui/include/: EmulatorInterface.h  EmulvApi.h  UiController.h
src/ui/memory/: MemoryFormatter.cpp  MemoryFormatter.h  MemoryWidget.cpp  MemoryWidget.h
src/ui/peripherals/: PeripheralWidget.h  PeripheralsTabWidget.cpp  PeripheralsTabWidget.h
src/ui/peripherals/gpio/: GPIOPinButton.cpp  GPIOPinButton.h  GPIOPortWidget.cpp  GPIOPortWidget.h  GPIOWidget.cpp  GPIOWidget.h
src/ui/peripherals/uart/: UARTWidget.cpp  UARTWidget.h
src/ui/qml/assets/: metafile.rc
src/ui/qml/assets/editable/: A9R1hsxq37_1cngdl8_9ik.tmp  app_logo.ai  breakpoint.ai  continue_button.ai  debug_button.ai  default_icon.ai  desktop_icon.ai  download_icon.ai  drive_icon.ai  ev_icon.ai  ev_square.ai  file_icon.ai  folder_blue.ai  folder_closed.ai  folder_open.ai  folder_yellow.ai  home_icon.ai  info_icon.ai  memory_icon.ai  placeholder_image.ai  refresh_icon.ai  registers_icon.ai  run_button.ai  search_icon.ai  step_button.ai  stop_button.ai  up_icon.ai
src/ui/qml/controls/: ActionButton.qml  IconButton.qml  SidebarButton.qml  WindowButton.qml
src/ui/qml/layouts/: MainWindowLayout.qml
src/ui/qml/models/: CodeAreaModel.cpp  CodeAreaModel.h  FileSystemModel.cpp  FileSystemModel.h  MemoryTableModel.cpp  MemoryTableModel.h  RegistersTableModel.cpp  RegistersTableModel.h  filesystemmodel.cpp  filesystemmodel.h
src/ui/qml/panels/: CenterPlaceholderPanel.qml  CodeAreaPanel.qml  FileExplorerPanel.qml  LastOpenedFilesPanel.qml  MemoryAreaPanel.qml  RegistersPanel.qml  SidePanelControlsPanel.qml  StatusBarPanel.qml
src/ui/qml/styles/: Colors.qml
src/ui/qml/views/: About.qml  ErrorBox.qml  Main.qml
src/ui/qml/windows/: BorderlessPopup.qml  BorderlessWindow.qml
src/ui/registers/: RegistersWidget.cpp  RegistersWidget.h
src/ui/resources/: resources.qrc
src/utils/: CMakeLists.txt
src/utils/config/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  LoggerConfig.cpp
src/utils/config/include/: ConfigLoader.h  LoggerConfig.h
src/utils/events/: AbstractEvent.h  BreakpointAreaWidgetEvents.cpp  BreakpointAreaWidgetEvents.h  CMakeLists.txt  EventData.cpp  EventEmitter.cpp  EventEmitter.h  Events.cpp  PeripheralDeviceEvent.h  SimpleEvent.cpp  SimpleEvent.h  gpio_events.cpp  gpio_events.h  uart_event.cpp  uart_event.h
src/utils/events/include/: AbstractEvent.h  BreakpointAreaWidgetEvents.h  EventData.h  EventEmitter.h  Events.h  PeripheralDeviceEvent.h  SimpleEvent.h  gpio_events.h  uart_event.h
test/: CMakeLists.txt  memory_experiment.c
test/events/: CMakeLists.txt  EventData_test.cpp  Events_test.cpp  test_base.h
test/gpio/: CMakeLists.txt  gpio_test-apb2-enable.c  gpio_test.c  main-arduino.c  main.c  test_base.h  test_change_state.cpp  test_configuration.cpp  test_input.cpp  test_output.cpp
test/gpio/testGpioConfig/linux/: testGpioConfig.json
test/uart/: CMakeLists.txt  test_base.h  test_configuration.cpp  test_receiver.cpp  test_transmitter.cpp  uart_test_receiver.c  uart_test_transmitter.c
test/uart/testUartConfig/linux/: testUartConfig.json
test/uart/testUartConfig/windows/: testUartConfig.json
test/ui/: CMakeLists.txt  config.json
test/ui/TS_01/: TS_01_01.cpp
test/ui/TS_02/: TS_02_01.cpp  TS_02_02.cpp  TS_02_03.cpp  TS_02_04.cpp
test/ui/elf/: gpio_test.elf  memory_experiment.elf  uart_test_receiver.elf
test/unit/: CMakeLists.txt  run_unit_tests.bash
test/unit/gpio/: test_base.h  test_configuration.cpp  test_input.cpp  test_output.cpp
test/unit/uart/: test_base.h  (+3 more)
user_environment/: readme.md
(+1 files in other folders)
